--- a/Responsiveness-Portfolio/assets/style/style.css
+++ b/Responsiveness-Portfolio/assets/style/style.css
@@ -183,3 +183,116 @@ input[type=submit]:hover {
   background-color: #6666;
   text-align:center;
 }
+
+/***************************
+	Media Queries
+****************************/
+
+@media (max-width: 640px) {
+
+	.header {
+		width: 640px;
+	}
+
+	.header-right {
+		border-bottom: none;
+	}
+
+	a{
+		text-align: center;
+		width: 640px;
+	}
+	
+	
+	nav {
+		background-color: #fff;
+		width: 640px;
+		border-bottom: 2px solid #ddd;
+	}
+
+	nav ul li {
+		line-height: 60px;
+	}
+
+	nav ul li a {
+		margin-left: 40px;
+		padding-left: 70px;
+	}
+
+	.snake {
+		margin-left: 150px;
+	}
+
+	p {
+		word-wrap: break-word;
+		margin-top: 20px;
+		display: inline-block;
+	}
+	
+	.header {
+		width: 560px;
+		margin-left: 40px;
+		margin-bottom: 30px;
+	}
+	
+	.image {
+		margin-left: 100px;
+	}
+}
+
+@media (min-width: 768px) and (max-width: 979px) {
+
+	.header {
+		width: 768px;
+	}
+
+
+	.header {
+		margin-left: 20px;
+	}
+
+	nav ul {
+		padding-right: 20px;
+	}
+
+	.content {
+		width: 730px;
+		margin-left: 20px;
+		margin-bottom: 30px;
+	}
+
+	nav ul li {
+		font-size: 16px;
+	}
+
+}
+
+@media (min-width: 980px) {
+
+	.header {
+		width: 980px;
+	}
+
+	.header-right {
+		margin-left: 80px;
+	}
+
+	nav ul {
+		padding-right: 80px;
+	}
+
+	.snake {
+		margin-left: 100px;
+}
+
+	p {
+		word-wrap: break-word;
+		margin-top: 20px;
+		display: inline-block;
+	}
+
+.content {
+		width: 470px;
+		margin-left: 80px;
+		margin-bottom: 30px;
+	}
